# oakdb-experiments

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: depoy.yml
assets/: 100-create-obj.167ecf34.js  101-set-prop.15e0a9eb.js  101-set-prop.b780cc87.js  102-set-prop-existing.82be8db1.js  102-set-prop-existing.b504999e.js  103-set-prop-obj.e7806393.js  103-set-prop-obj.edd5cb4e.js  110-delete.7a359bf0.js  index.213aee9f.js  index.28b8553d.css  index.35579e1e.js  index.627d2c68.js  index.b1943d9e.js  index.cabddcdf.css  indexing.b27a2355.js  log.89eb5970.js  readme.70cfd83e.js  real-time.d30d7206.js  special-fields.aff6f179.js  storing-parents.09d7b05c.js  uuid.94fa6706.js  vendor.518da8e7.js  vendor.7d7b54cf.js  vendor.bdc0d97f.js
docs/: data-model.md  mvp.md  readme.md  roadmap.md
docs/_backburner/: docs.md
docs/data-model/: readme.md
docs/discussion/: empty-objects.md  indexing.md  log.md  uuid.md  (+3 more)
poc/: package.json  tsconfig.json
poc-flights-app/: README.md  package-lock.json  package.json  tailwind.config.cjs
poc-my-redis/: Cargo.toml
poc-pushid/: pushid.js
poc-realtime-subtable/: README.md  jest.config.js  package.json  pathtab.js  playground.js
poc-rust/: Cargo.toml  README.md
poc-rust-ws/: Cargo.toml
poc-rust/src/: bimap.rs  cli.rs  commitlog.rs  handler.rs  quickjs.rs
poc-secondary-index/: README.md  leveldb.js  package.json
poc-tree-index/: README.md  createReadStream.js  level-fake.js  main.js  package.json  utils.js
visualizer/: .eslintrc  .prettierrc  index.html  package.json  vite.config.js
(+70 files in other folders)
