[package]
name = "poc-rust"
version = "0.1.0"
license = "ISC"
edition = "2018"

[dependencies]
base64 = "0.13.0"
bimap = "0.6.2"
clap = { version = "3.1.2", features = ["derive"] }
colorful = "0.2.1"
commitlog = "0.2"
futures = { version = "0.3", default-features = false }
log = "0.4.14"
quick-js = "0.4.1"
serde = {version = "1.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[[bin]]
name = "quickjs"
path = "src/quickjs.rs"

[[bin]]
name = "commitlog"
path = "src/commitlog.rs"

[[bin]]
name = "bimap"
path = "src/bimap.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
